
2014-01-09
- bios/blkdev.c bios/blkdev.h bios/ide.c bios/sd.c: Refactor media change
  code to simplify future updates. (RFB)

2014-01-09
- bios/blkdev.c: Replaced DBG_BLKDEV with KDEBUG. (RFB)

2014-01-13
- bios/floppy.c: Replaced DBG_FLOP with KDEBUG. (RFB)

2014-01-16
- bios/blkdev.c bios/blkdev.h bios/disk.c bios/disk.h: Refactor partition
  detection for future media change update. (RFB)

2014-01-20
- bios/disk.c: Code cleanup: use MBR definition rather than hardcoded
  offsets. (RFB)
- bios/blkdev.c bios/blkdev.h bios/disk.c: Improve detection of FAT12 /
  FAT16 / FAT32 partitions. (RFB)
- bios/blkdev.c: Code cleanup: use ptr instead of index. (RFB)
- bios/acsi.c: Handle GET_MEDIACHANGE in acsi_ioctl(). (RFB)

2014-01-21
- bios/acsi.c bios/blkdev.c bios/ide.c bios/sd.c bios/xhdi.c: Propagate
  Rwabs() read/write flags to low-level drivers. (RFB)

2014-01-22
- bios/blkdev.c bios/blkdev.h bios/disk.c bios/disk.h bios/sd.c
  bios/xhdi.c bios/xhdi.h: Add media change support for SD/MMC. (RFB)

2014-01-23
- bios/xhdi.c: Code cleanup: remove unnecessary case statements. (RFB)
- bios/floppy.c: Detect floppy drives when no disks are inserted. (RFB)

2014-01-24
- bios/disk.c bios/xhdi.c: Always assign at least 1 logical device to
  the SD/MMC slot. (RFB)

2014-01-26
- bios/ide.c: Bypass firmware bug on certain CF cards which caused
  multi-sector i/o to fail. (RFB)
- desk/deskmain.c desk/desksupp.c: Avoid opening window for a disk that
  no longer exists. (RFB)
- bios/disk.c: Code cleanup: use pointer instead of index. (RFB)
- aes/gemaplib.c aes/gemevlib.c aes/gemgsxif.c aes/gemoblib.c
  aes/gemrslib.c aes/gemsuper.c aes/gemwmlib.c: Code cleanup: eliminate
  ADDR() macro in AES routines. (RFB)

2014-01-27
- aes/gemaplib.c aes/gemaplib.h aes/gedisp.c aes/geminit.c
  aes/gemsuper.c aes/struct.h: Fix appl_trecord() & appl_tplay(). (RFB)
- include/compat.h: Remove #define for LWSET(), no longer used. (RFB)
- desk/gembind.c: Code cleanup: remove unnecessary global. (RFB)